--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-  
+    JUST FOR FUNZIES! :D
   </body>
 </html>
